# the-gooning-company

./: .env.example  .gitignore  AGENTS.md  LICENSE  OPENHARNESS.md  README.md  RUNNING.md  WhatWeNeed.md  pyproject.toml  requirements.txt
Product-requirement-doc/: README.md  finance.md  marketing-agent.md  marketing.md  product.md  router.md
dashboard/: index.html  package-lock.json  package.json
dashboard/src/: App.jsx  App.module.css
dashboard/src/api/: index.js
dashboard/src/components/: CascadePanel.jsx  CascadePanel.module.css  ChatPanel.jsx  ChatPanel.module.css  GodFilesPanel.jsx  GodFilesPanel.module.css  RoadmapPanel.jsx  RoadmapPanel.module.css
dashboard/src/styles/: global.css
dashboard_backend/: __init__.py  __main__.py  app.py  cascade.py  chat.py  gods.py  roadmap.py
dev-concepts/: README.md  context-injection.md  implementation.md  mcp-tool-registry.md
orchestrator/: __init__.py  bootstrap.py  config.py  demo_marketing_flow.py  launch.py
state/: README.md  roadmap.md
tools/mock_mcp/: README.md  __init__.py  __main__.py  server.py  spec.py
tools/mock_mcp/tools/: __init__.py  finance.py  marketing.py  product.py  roadmap.py  router.py
workspaces/: README.md
workspaces/_shared/: base-system.md  mcp.json  user.md
workspaces/_shared/skills/: README.md
workspaces/finance/: BOOTSTRAP.md  gateway.json  identity.md  settings.json  soul.md
workspaces/finance/memory/: MEMORY.md  god.md
workspaces/finance/skills/: README.md
workspaces/marketing/: BOOTSTRAP.md  gateway.json  identity.md  run.py  settings.json  soul.md  user.md
workspaces/marketing/memory/: MEMORY.md  god.md
workspaces/marketing/skills/: README.md  content-strategist.md  marketing-ops-analyst.md  performance-marketer.md
workspaces/product/: BOOTSTRAP.md  gateway.json  identity.md  settings.json  soul.md
workspaces/product/memory/: MEMORY.md  god.md
workspaces/product/skills/: README.md
workspaces/router/: BOOTSTRAP.md  gateway.json  identity.md  run.py  settings.json  soul.md
workspaces/router/memory/: MEMORY.md  god.md
workspaces/router/skills/: README.md
