[project]
name = "the-gooning-company"
version = "0.0.1"
description = "Router + three domain agents (Product / Marketing / Finance) on OpenHarness."
requires-python = ">=3.11"
readme = "README.md"
license = { file = "LICENSE" }

# Runtime dependencies.
# NOTE: OpenHarness version is intentionally pinned loosely for the hackathon;
# tighten once we have a known-good release.
dependencies = [
  "openharness-ai>=0.1.6,<0.2",
  # MCP Python SDK — we depend on it directly for the mock server's
  # FastMCP streamable-http transport. OpenHarness pulls it as a
  # transitive, but we import it ourselves so pin it explicitly.
  "mcp>=1.8,<2",
  # .env loader used by orchestrator/bootstrap.py. Also transitive via
  # openharness-ai, but we import it directly.
  "python-dotenv>=1.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8",
  "ruff>=0.5",
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["orchestrator*", "tools*"]

[tool.ruff]
line-length = 100
target-version = "py311"
